# Cray

./: .gitignore  README.md  WEBSOCKET.md  hello.txt  output.json  pyproject.toml  setup.py  test_websocket.html
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.vue
dashboard/src/components/: Header.vue  RunsList.vue  Sidebar.vue  StatsCard.vue
dashboard/src/router/: index.ts
dashboard/src/services/: websocket.ts
dashboard/src/stores/: settings.ts  workflow.ts
dashboard/src/styles/: main.css
dashboard/src/types/: index.ts
dashboard/src/views/: Dashboard.vue  Editor.vue  Metrics.vue  Plugins.vue  RunDetail.vue  Runs.vue  Settings.vue  Versions.vue  WorkflowDetail.vue  Workflows.vue
docs/: PLUGIN_DEVELOPMENT.md  WORKFLOW_REFERENCE.md  database_plugin.md  git_plugin.md
examples/: aws-example.yaml  data-processing.yaml  database_workflow.yaml  dependency-demo.yaml  email-report.yaml  error-handling-workflow.yaml  file-backup.yaml  git_workflow.yaml  hello.yaml  notification.yaml  parallel-workflow.yaml  redis-example.yaml  scheduled-backup.yaml  template-demo.yaml  web-scrape.yaml  workflow-chain-demo.yaml
src/cray/: __init__.py  __main__.py  cli.py  scheduler.py
src/cray/api/: __init__.py
src/cray/core/: __init__.py  config.py  dependency.py  metrics.py  runner.py  secrets.py  task.py  template.py  versioning.py  (+1 more)
tests/: conftest.py  test_cli.py  test_core.py  test_dependency.py  test_market.py  test_parallel_execution.py  test_plugins.py  test_scheduler.py  test_template.py  test_web.py
workflows/: my-workflow.yaml  simple.yaml  test-http.yaml  test.yaml
(+21 files in other folders)
