[project]
name = "cray"
version = "0.1.0"
description = "Cray - A lightweight automation tool with claws"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["automation", "workflow", "task", "scheduler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
schedule = [
    "apscheduler>=3.10.0",
]
database = [
    "pydtc>=0.8.4",
    "pandas>=2.0.0",
]
aws = [
    "boto3>=1.34.0",
]
all = [
    "cray[web,schedule,database,aws]",
]

[project.scripts]
cray = "cray.cli:main"
cray-server = "cray.api:run_server"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
